--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,5 +8,8 @@ spring.social.github.appId=xx
 spring.social.github.appSecret=xx
 spring.social.twitter.appId=xx
 spring.social.twitter.appSecret=xx
+jwt.keystore.location=/
+jwt.keystore.password=testOnlyKeystore
+jwt.keystore.alias=default
 logging.level.org.springframework.web=DEBUG
-server.port=3000
+server.port=9080
