--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 spring.social.auto_connection_views=false
 security.basic.enabled=false
-spring.social.facebook.appId=xx
-spring.social.facebook.appSecret=xx
-spring.social.google.appId=xx
-spring.social.google.appSecret=xx
-spring.social.github.appId=xx
-spring.social.github.appSecret=xx
-spring.social.twitter.appId=xx
-spring.social.twitter.appSecret=xx
-jwt.keystore.location=/
+spring.social.facebook.appId=${FACEBOOK_APP_ID}
+spring.social.facebook.appSecret=${FACEBOOK_APP_SECRET}
+spring.social.google.appId=${GOOGLE_APP_ID}
+spring.social.google.appSecret=${GOOGLE_APP_SECRET}
+spring.social.github.appId=${GITHUB_APP_ID}
+spring.social.github.appSecret=${GITHUB_APP_SECRET}
+spring.social.twitter.appId=${TWITTER_CONSUMER_KEY}
+spring.social.twitter.appSecret=${TWITTER_CONSUMER_SECRET}
+jwt.keystore.location=/etc/cert/key.jks
 jwt.keystore.password=testOnlyKeystore
 jwt.keystore.alias=default
 logging.level.org.springframework.web=DEBUG
