--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,17 @@
         </repository>
     </repositories>
 
+  <pluginRepositories>
+    <pluginRepository>
+      <id>spring-snapshots</id>
+      <url>https://repo.spring.io/snapshot</url>
+    </pluginRepository>
+    <pluginRepository>
+      <id>spring-milestones</id>
+      <url>https://repo.spring.io/milestone</url>
+    </pluginRepository>
+  </pluginRepositories>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -128,6 +139,10 @@
             <version>0.9.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.security.oauth</groupId>
+            <artifactId>spring-security-oauth2</artifactId>
+        </dependency>
 
         <!-- test -->
 
@@ -175,6 +190,15 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+        <version>2.1.0.BUILD-SNAPSHOT</version>
+        <configuration>
+            <environmentVariables>
+                <FRONT_END_SUCCESS_CALLBACK>5000</FRONT_END_SUCCESS_CALLBACK>
+                <FRONT_END_FAIL_CALLBACK>Some Text</FRONT_END_FAIL_CALLBACK>
+                <FRONT_END_AUTH_URL>http://localhost:9080/auth</FRONT_END_AUTH_URL>
+                <GAMEON_MODE>development</GAMEON_MODE>
+            </environmentVariables>
+        </configuration>
 			</plugin>
             <plugin>
                 <groupId>io.fabric8</groupId>
