--- a/src/main/docker/Dockerfile
+++ b/src/main/docker/Dockerfile
@@ -1,1 +1,8 @@
-FROM fish
+FROM gameontext/docker-liberty-custom
+
+ENV SERVERDIRNAME auth-spring-social
+
+COPY . /
+HEALTHCHECK --timeout=10s --start-period=40s CMD wget -q -O /dev/null http://localhost:9080/health
+
+CMD ["/startup.sh"]
