Add Auth Redirects for Old Auth Compat, update Spring Profiles

--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,9 @@ springBoot {
     buildInfo();
 }
 
+bootRun {
+  environment SPRING_PROFILES_ACTIVE: environment.SPRING_PROFILES_ACTIVE ?: "local"
+}
 
 group = 'org.gameontext'
 version = '0.0.1-SNAPSHOT'
