--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,19 @@
 spring.social.auto_connection_views=false
 security.basic.enabled=false
-spring.social.facebook.appId=${FACEBOOK_APP_ID:""}
-spring.social.facebook.appSecret=${FACEBOOK_APP_SECRET:""}
-spring.social.google.appId=${GOOGLE_APP_ID:""}
-spring.social.google.appSecret=${GOOGLE_APP_SECRET:""}
-spring.social.github.appId=${GITHUB_APP_ID:""}
-spring.social.github.appSecret=${GITHUB_APP_SECRET:""}
-spring.social.twitter.appId=${TWITTER_CONSUMER_KEY:""}
-spring.social.twitter.appSecret=${TWITTER_CONSUMER_SECRET:""}
+spring.social.facebook.appId=${FACEBOOK_APP_ID}
+spring.social.facebook.appSecret=${FACEBOOK_APP_SECRET}
+spring.social.google.appId=${GOOGLE_APP_ID}
+spring.social.google.appSecret=${GOOGLE_APP_SECRET}
+spring.social.github.appId=${GITHUB_APP_ID}
+spring.social.github.appSecret=${GITHUB_APP_SECRET}
+spring.social.twitter.appId=${TWITTER_CONSUMER_KEY}
+spring.social.twitter.appSecret=${TWITTER_CONSUMER_SECRET}
 jwt.keystore.location=/etc/cert/key.jks
 jwt.keystore.password=testOnlyKeystore
 jwt.keystore.alias=default
-gameon.mode=${GAMEON_MODE}
+gameon.mode=${GAMEON_MODE:"production"}
+frontend.auth.url=${FRONT_END_AUTH_URL}
+frontend.success.url=${FRONT_END_SUCCESS_CALLBACK}
+frontend.failure.url=${FRONT_END_FAIL_CALLBACK}
 logging.level.org.springframework.web=DEBUG
 server.port=9080
