fix property names

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ jwt.keystore.password=testOnlyKeystore
 jwt.keystore.alias=default
 gameon.mode=${GAMEON_MODE:"production"}
 frontend.auth.url=${FRONT_END_AUTH_URL}
-frontend.success.url=${FRONT_END_SUCCESS_CALLBACK}
-frontend.failure.url=${FRONT_END_FAIL_CALLBACK}
+frontend.success.callback=${FRONT_END_SUCCESS_CALLBACK}
+frontend.failure.callback=${FRONT_END_FAIL_CALLBACK}
 logging.level.org.springframework.web=DEBUG
 server.port=9080
