Alter actuator context path to match old-auth

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.social.auto_connection_views=false
 security.basic.enabled=false
+management.context-path=/auth
 spring.social.facebook.appId=${FACEBOOK_APP_ID}
 spring.social.facebook.appSecret=${FACEBOOK_APP_SECRET}
 spring.social.google.appId=${GOOGLE_APP_ID}
