--- a/src/main/docker/Dockerfile
+++ b/src/main/docker/Dockerfile
@@ -1,8 +1,8 @@
-FROM gameontext/docker-liberty-custom
+FROM gameontext/docker-liberty-custom:master-9
 
 ENV SERVERDIRNAME auth-spring-social
 
 COPY . /
-HEALTHCHECK --timeout=10s --start-period=40s CMD wget -q -O /dev/null http://localhost:9080/health
+HEALTHCHECK --timeout=10s --start-period=40s CMD wget -q -O /dev/null http://localhost:9080/auth/health
 
 CMD ["/startup.sh"]
